fix: read typed session data and drop unused UserDetailsService in JwtAuthFilter