@@ -12,7 +12,6 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import mst.local.mstsoftware.modules.user.enums.RoleType;
 import mst.local.mstsoftware.modules.user.resources.CustomUserDetails;
 import mst.local.mstsoftware.modules.user.services.impl.PermissionCacheService;
 import mst.local.mstsoftware.modules.user.services.impl.UserSessionCache;
@@ -25,17 +24,14 @@ import org.springframework.security.authentication.UsernamePasswordAuthenticatio
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Component
 @Slf4j // cài sẵn logger
@@ -44,7 +40,6 @@ public class JwtAuthFilter extends OncePerRequestFilter {
     private final JwtServiceInterface jwtService;
     private final BlacklistServiceInterface blacklistService;
     private final ObjectMapper objectMapper;
-    private final UserDetailsService userDetailsService;
     private final PermissionCacheService permissionCacheService;
     private final UserSessionCache userSessionCache;
 
@@ -79,35 +74,31 @@ public class JwtAuthFilter extends OncePerRequestFilter {
             }
             request.setAttribute(TOKEN_ATTRIBUTE, token);
             Long userId = jwtService.extractSubject(token);
-//            List<RoleType> roles = jwtService.extractRoles(token);
-
 
             if (userId != null && SecurityContextHolder.getContext().getAuthentication() == null) {
 
-                Map<String, Object> session = userSessionCache.get(userId);
+                UserSessionCache.SessionData session = userSessionCache.get(userId);
 
                 if (session == null) {
                     // Session hết hạn hoặc bị evict → force logout
                     writeErrorResponse(response, "Phiên đăng nhập đã hết hạn.");
                     return;
                 }
-                String email = (String) session.get("email");
-                List<String> roles = (List<String>) session.get("roles");
 
                 // Load permissions từ Redis cache theo roles
                 Set<String> permissions = permissionCacheService.getPermissionsByRoles(
-                        roles.stream().map(RoleType::valueOf).collect(Collectors.toList())
+                        session.roles().stream().toList()
                 );
 
                 // Build authorities
                 Set<GrantedAuthority> authorities = new HashSet<>();
-                roles.forEach(r -> authorities.add(new SimpleGrantedAuthority("ROLE_" + r)));
+                session.roles().forEach(r -> authorities.add(new SimpleGrantedAuthority("ROLE_" + r)));
                 permissions.forEach(p -> authorities.add(new SimpleGrantedAuthority(p)));
 
                 // Build principal
                 CustomUserDetails userDetails = CustomUserDetails.builder()
                         .id(userId)
-                        .email(email)
+                        .email(session.email())
                         .authorities(authorities)
                         .build();
 
@@ -116,26 +107,14 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 
                 authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                 SecurityContextHolder.getContext().setAuthentication(authToken);
-
-//                UserDetails userDetails = userDetailsService.loadUserByUsername(email);
-//                if (jwtService.isTokenValid(token, userDetails)) {
-//                    UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
-//                            userDetails, null, userDetails.getAuthorities());
-//
-//                    authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request)); // truy xuất
-//                    // metadata
-//                    // request
-//                    SecurityContextHolder.getContext().setAuthentication(authToken);
-//
-//                }
             }
         } catch (JwtException e) {
-            String message = JWT_ERRORS_MESSAGES.getOrDefault(e.getClass(), "Lỗi xác thực token 11!");
+            String message = JWT_ERRORS_MESSAGES.getOrDefault(e.getClass(), "Lỗi xác thực token!");
             writeErrorResponse(response, message);
             return;
 
         } catch (Exception e) {
-            writeErrorResponse(response, "Lỗi xác thực token 12!");
+            writeErrorResponse(response, "Lỗi xác thực token!");
             return;
         }
         filterChain.doFilter(request, response);
